Fix space between sections on mobile first.

--- a/student-cvs/ernzxr-2086/style.css
+++ b/student-cvs/ernzxr-2086/style.css
@@ -198,7 +198,7 @@ article {
     flex-direction: column;
     align-items: center;
     width: 100%;
-    padding: 3% 0;
+    padding: max(37px, 3%) 0;
 }
 
 .skills {
@@ -365,7 +365,7 @@ footer {
 }
 
 footer div {
-    padding: 0 4% 0 4%;
+    padding: 0 3% 0 3%;
 }
 
 .rrss-container div:not(:last-child) {
@@ -378,7 +378,7 @@ footer a {
 
 footer p {
     text-align: center;
-    padding: 4% 0;
+    padding: max(22px, 4%) 0;
     font-size: 90%;
     font-weight: 500;
 }
@@ -398,14 +398,6 @@ footer p {
     .form-container {
         width: 70%;
     }
-    footer p {
-        text-align: center;
-        padding: 22px 0;
-    }
-
-    footer div {
-        padding: 0 3% 0 3%;
-    }
 
     .form-section {
         padding-top: 30px;
@@ -415,5 +407,4 @@ footer p {
         padding-bottom: 37px;
         padding-top: 37px;
     }
-
 }
